--- a/res/layout/application_center_item.xml
+++ b/res/layout/application_center_item.xml
@@ -16,7 +16,7 @@
   
         <ImageView  
             android:id="@+id/iv_application_icon"  
-            android:layout_width="30dp"  
+            android:layout_width="40dp"  
             android:layout_height="40dp"  
             android:layout_centerHorizontal="true"  
             android:contentDescription="@string/app_name" 
@@ -31,7 +31,7 @@
             android:layout_marginTop="5.0dip"  
             android:maxLines="1"  
             android:textSize="14.0sp" 
-            android:text="图标文字"
+            android:text=""
             />  
     </RelativeLayout>
 </RelativeLayout>
