--- a/res/layout/applications_center_activity.xml
+++ b/res/layout/applications_center_activity.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/title_background_color"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     >
 
     <include
         android:id="@+id/view_title_bar"
@@ -13,7 +14,7 @@
         android:id="@+id/tv_menu_type1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="工具与服务"
+        android:text=""
         android:padding="10dp"
         android:background="@color/activity_bg_color"
          />
@@ -33,7 +34,7 @@
         android:id="@+id/tv_menu_type2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="成长与赚钱" 
+        android:text="" 
         android:padding="10dp"
         android:background="@color/activity_bg_color"
         />
