--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:gravity="center" >
+    android:gravity="center" 
+    >
 
     <com.meijialife.simi.ui.CollapseCalendarView
         android:id="@+id/layout_calendar"
