--- a/res/layout/find__to_fra_title_bar.xml
+++ b/res/layout/find__to_fra_title_bar.xml
@@ -5,7 +5,8 @@
     android:layout_height="@dimen/title_bar_height"
     android:background="@color/simi_color_red"
     android:gravity="center_vertical"
-    android:visibility="visible" >
+    android:visibility="visible"
+     >
 
     <RelativeLayout
         android:id="@+id/rl_total_search"
