--- a/res/layout/layout_main_bottom.xml
+++ b/res/layout/layout_main_bottom.xml
@@ -39,15 +39,18 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="3.0dip"
+                        android:layout_marginBottom="4.0dip"
                         android:layout_marginTop="5.0dip"
+                        android:layout_gravity="center"
                         android:background="@drawable/tab_index_bg_selector" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
-                        android:text="首页"
+                        android:text="日程"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:textColor="@color/tab_text_color_selector"
                         android:textSize="@dimen/bottom_bar_text_size" />
                 </LinearLayout>
@@ -76,8 +79,9 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="3dip"
+                        android:layout_marginBottom="4dip"
                         android:layout_marginTop="5.0dip"
+                        android:layout_gravity="center"
                         android:src="@drawable/tab_search_bg_selector" />
 
                     <TextView
@@ -85,6 +89,8 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="发现"
+                        android:gravity="center"
+                        android:layout_gravity="center"
                         android:textColor="@color/tab_text_color_selector"
                         android:textSize="@dimen/bottom_bar_text_size" />
                 </LinearLayout>
@@ -124,8 +130,9 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="3dip"
+                        android:layout_marginBottom="4dip"
                         android:layout_marginTop="5.0dip"
+                        android:layout_gravity="center"
                         android:src="@drawable/tab_message_bg_selector" />
 
                     <TextView
@@ -133,6 +140,8 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="圈子"
+                        android:gravity="center"
+                        android:layout_gravity="center"
                         android:textColor="@color/tab_text_color_selector"
                         android:textSize="@dimen/bottom_bar_text_size" />
                 </LinearLayout>
@@ -180,8 +189,9 @@
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:layout_marginBottom="3dip"
+                            android:layout_marginBottom="4dip"
                             android:layout_marginTop="5.0dip"
+                            android:layout_gravity="center"
                             android:src="@drawable/tab_profile_bg_selector" />
 
                         <TextView
@@ -189,6 +199,8 @@
                             android:layout_height="wrap_content"
                             android:singleLine="true"
                             android:text="我的"
+                            android:gravity="center"
+	                        android:layout_gravity="center"
                             android:textColor="@color/tab_text_color_selector"
                             android:textSize="@dimen/bottom_bar_text_size" />
                     </LinearLayout>
@@ -211,6 +223,7 @@
             android:drawableTop="@drawable/icon_plus_add"
             android:gravity="center"
             android:text="工作"
+            android:drawablePadding="5dp"
             android:textColor="@color/tab_text_color_selector"
             android:textSize="@dimen/bottom_bar_text_size" />
     </FrameLayout>
