--- a/res/layout/find_other_list.xml
+++ b/res/layout/find_other_list.xml
@@ -95,14 +95,26 @@
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent" />
-
-        <ListView
-            android:id="@+id/find_list_view"
+        
+         <com.handmark.pulltorefresh.library.PullToRefreshListView
+            xmlns:ptr="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/pull_refresh_finds_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:divider="@color/cut_off_rule"
-            android:dividerHeight="0.5dp" >
-        </ListView>
+            android:layout_height="500dp"
+            android:layout_marginBottom="5dp"
+           	android:layout_weight="1.0"
+            android:cacheColorHint="#00000000"
+            android:divider="#19000000"
+            android:dividerHeight="4dp"
+            android:fadingEdge="none"
+            android:fastScrollEnabled="false"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false"
+            android:smoothScrollbar="true"
+            ptr:ptrAnimationStyle="flip"
+            ptr:ptrListViewExtrasEnabled="false"
+            ptr:ptrScrollingWhileRefreshingEnabled="true"
+             >
+        </com.handmark.pulltorefresh.library.PullToRefreshListView>
    </LinearLayout>
 </LinearLayout>
