--- a/res/layout/layout_friend.xml
+++ b/res/layout/layout_friend.xml
@@ -178,7 +178,7 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="4dp"
         android:text="我的好友" />
-
+<!-- 
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
@@ -186,6 +186,24 @@
         android:divider="@color/cut_off_rule"
         android:dividerHeight="0.5dp"
          >
-    </ListView>
+    </ListView> -->
+    
+     <com.handmark.pulltorefresh.library.PullToRefreshListView
+           xmlns:ptr="http://schemas.android.com/apk/res-auto"
+           android:id="@+id/pull_refresh_lists"
+           android:layout_width="fill_parent"
+           android:layout_height="fill_parent"
+           android:cacheColorHint="#00000000"
+           android:divider="#19000000"
+           android:dividerHeight="2dp"
+           android:fadingEdge="none"
+           android:fastScrollEnabled="false"
+           android:footerDividersEnabled="false"
+           android:headerDividersEnabled="false"
+           android:smoothScrollbar="true"
+           ptr:ptrAnimationStyle="flip"
+           ptr:ptrListViewExtrasEnabled="false"
+           ptr:ptrScrollingWhileRefreshingEnabled="true" >
+       </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 </LinearLayout>
