--- a/res/layout/my_wallet_activity.xml
+++ b/res/layout/my_wallet_activity.xml
@@ -53,7 +53,7 @@
                 android:textColor="@color/red_text_color" />
         </RelativeLayout>
 
-        <ListView
+      <!--   <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -62,7 +62,24 @@
             android:dividerHeight="1dp"
             android:fadingEdge="none"
             android:overScrollMode="never" >
-        </ListView>
+        </ListView> -->
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
+            xmlns:ptr="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/pull_refresh_wallet_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:cacheColorHint="#00000000"
+            android:divider="#19000000"
+            android:dividerHeight="1dp"
+            android:fadingEdge="none"
+            android:fastScrollEnabled="false"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false"
+            android:smoothScrollbar="true"
+            ptr:ptrAnimationStyle="flip"
+            ptr:ptrListViewExtrasEnabled="false"
+            ptr:ptrScrollingWhileRefreshingEnabled="true" >
+        </com.handmark.pulltorefresh.library.PullToRefreshListView>
     </LinearLayout>
 
 </LinearLayout>
