--- a/res/layout/order_details_activity.xml
+++ b/res/layout/order_details_activity.xml
@@ -25,7 +25,7 @@
             android:id="@+id/item_tv_order_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="61293478364811104"
+            android:text=""
             android:textColor="@color/simi_color_gray" />
     </LinearLayout>
 
@@ -49,7 +49,7 @@
                     android:layout_width="52dp"
                     android:layout_height="52dp"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/order_icon" />
+                    /><!-- android:background="@drawable/order_icon"  -->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
                         android:id="@+id/item_tv_order_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="机票" />
+                        android:text="" />
 
                     <TextView
                         android:id="@+id/item_tv_order_money1"
