--弹出帮助屏幕

--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -69,6 +69,7 @@
           <com.handmark.pulltorefresh.library.PullToRefreshListView
             xmlns:ptr="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pull_refresh_msg_list"
+            android:background="@color/simi_color_white"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:cacheColorHint="#00000000"
