--- a/res/layout/layout_main_bottom.xml
+++ b/res/layout/layout_main_bottom.xml
@@ -132,6 +132,7 @@
                         android:layout_height="25dp"
                         android:layout_marginBottom="4dip"
                         android:layout_marginTop="5.0dip"
+                        android:layout_marginLeft="7dp"
                         android:layout_gravity="center"
                         android:src="@drawable/tab_message_bg_selector" />
 
@@ -140,6 +141,7 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="圈子"
+                        android:layout_marginLeft="7dp"
                         android:gravity="center"
                         android:layout_gravity="center"
                         android:textColor="@color/tab_text_color_selector"
