--- a/res/layout/layout_main_plus_meetting.xml
+++ b/res/layout/layout_main_plus_meetting.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/activity_bg_color"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    >
 
     <include
         android:id="@+id/view_title_bar"
