--- a/res/layout/auto_complete_textview_item.xml
+++ b/res/layout/auto_complete_textview_item.xml
@@ -2,26 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:background="@color/bg_gv"
+    android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/item_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:text="name"
-        android:textColor="#808080"
-        android:textSize="18sp" />
+        android:layout_gravity="center"
+        android:orientation="vertical" 
+        android:layout_weight="1"
+        >
 
-    <TextView
-        android:id="@+id/item_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="1dp"
-        android:text="address" />
+        
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:text=""
+            android:textColor="@color/simi_color_black"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/item_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="1dp"
+            android:textColor="@color/simi_color_gray"
+            android:textSize="12sp"
+            android:text="" />
+    </LinearLayout>
+     
+    <LinearLayout
+        android:id="@+id/m_ll_checked"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="3"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        >
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/iconfont_duihao"
+            android:layout_gravity="center"
+            />
+	</LinearLayout>
 
 </LinearLayout>
