--- a/res/layout/main_plus_center.xml
+++ b/res/layout/main_plus_center.xml
@@ -30,7 +30,7 @@
             android:gravity="center"
             android:text="工作与工具"
             android:textColor="@drawable/personpage_tab_selector"
-            android:textSize="@dimen/my_publish_text_size" />
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="成长与赚钱"
             android:textColor="@drawable/personpage_tab_selector"
-            android:textSize="@dimen/my_publish_text_size" />
+            android:textSize="15sp" />
     </LinearLayout>
 
     <View
@@ -63,7 +63,7 @@
             android:cacheColorHint="#00000000"
             android:background="@color/simi_color_white"
             android:divider="#19000000"
-            android:dividerHeight="2dp"
+            android:dividerHeight="1dp"
             android:fadingEdge="none"
             android:fastScrollEnabled="false"
             android:footerDividersEnabled="false"
