--- a/res/layout/user_msg_list_item.xml
+++ b/res/layout/user_msg_list_item.xml
@@ -12,10 +12,10 @@
 
         <ImageView
             android:id="@+id/msg_iv_icon_url"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
-            android:padding="10dp"
+            android:padding="8dp"
             android:src="@drawable/card_default_huiyi" />
 
         <LinearLayout
@@ -28,8 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp" >
+                android:paddingBottom="6dp"
+                android:paddingTop="6dp" >
 
                 <TextView
                     android:id="@+id/msg_tv_title"
@@ -38,7 +38,7 @@
                     android:layout_alignParentLeft="true"
                     android:gravity="center"
                     android:text="通知公告"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     />
 
                 <TextView
@@ -70,10 +70,10 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="0.1dp"
                     android:layout_below="@id/msg_tv_summary"
-                    android:layout_marginTop="10dp"
-                    android:background="#e1e1e1" 
+                    android:layout_marginTop="9dp"
+                    android:background="@color/simi_color_line_gray" 
                     android:visibility="visible"
                     />
             </RelativeLayout>
