--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -10,6 +10,8 @@
     <color name="simi_color_gray">#676767</color>
     <!-- 统一深灰 -->
     <color name="simi_color_dark_gray">#929292</color>
+    <!-- 列表分割线颜色 -->
+    <color name="simi_color_line_gray">#d8d8d8</color>
     <!-- 统一白色 -->
     <color name="simi_color_white">#FFFFFF</color>
     <!-- 统一黑色 -->
