--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -81,5 +81,6 @@
  	<color name="card_hui_yi">#11cd6e</color>
  	<color name="card_mian_shi">#00bb9c</color>
  	<color name="card_chai_lv">#56abe4</color>
+ 	<color name="plus_song_shui">#56abe4</color>
  	
 </resources>
