--- a/res/layout/home_cardlist.xml
+++ b/res/layout/home_cardlist.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@color/activity_bg_color" 
-        android:visibility="gone"
+        android:visibility="visible"
         />
 
     <RelativeLayout
@@ -169,7 +169,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.1dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
