--- a/res/layout/layout_card_title_bar.xml
+++ b/res/layout/layout_card_title_bar.xml
@@ -19,20 +19,31 @@
         android:paddingRight="90dp"
         android:src="@drawable/iconfont_white_back"
         android:visibility="visible" />
-
+    
+    
     <TextView
         android:id="@+id/m_tv_card_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginRight="2dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:focusable="false"
         android:gravity="center"
         android:singleLine="true"
-        android:text=""
+        android:text="通知公告"
         android:textColor="@color/simi_color_white"
         android:textSize="@dimen/title_bar_text_size" />
+    
+    <ImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@drawable/iconfont_yingyongbangzhu"
+        android:layout_alignTop="@id/m_tv_card_title"
+        android:layout_alignBottom="@id/m_tv_card_title"
+        android:layout_toRightOf="@id/m_tv_card_title"
+        
+        />
+    
 
 </RelativeLayout>
