--- a/res/layout/water_list_activity.xml
+++ b/res/layout/water_list_activity.xml
@@ -22,7 +22,7 @@
 
         <com.handmark.pulltorefresh.library.PullToRefreshListView
             xmlns:ptr="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/m_card_list"
+            android:id="@+id/m_water_list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -38,22 +38,40 @@
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
         <LinearLayout
-            android:id="@+id/m_ll_create_card"
+            android:id="@+id/m_ll_bottom"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:layout_gravity="center"
             android:layout_weight="3"
-            android:background="@color/simi_color_white"
-            android:gravity="center" >
+            android:gravity="center" 
+            android:background="@color/simi_color_gray"
+            android:orientation="horizontal"
+            >
 
             <TextView
-                android:id="@+id/m_tv_create_card"
+                android:id="@+id/m_tv1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text=""
+                android:text="一键送水"
+                android:layout_weight="1"
                 android:textColor="@color/simi_color_white"
-                android:textSize="@dimen/title_bar_text_size" />
+                android:textSize="16sp" />
+            <View
+                android:layout_width="0.1dp"
+                android:layout_height="match_parent"
+                android:background="@color/simi_color_white"
+              	android:layout_marginTop="10dp"
+              	android:layout_marginBottom="10dp"
+                />
+              <TextView
+                android:id="@+id/m_tv2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="智能配置"
+                android:textColor="@color/simi_color_white"
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 
